fixed decoration rotation save, link z-indexing

--- a/core/interface/static/css/projectalice.css
+++ b/core/interface/static/css/projectalice.css
@@ -196,6 +196,7 @@ button.button{ font-size: 1.6em; height: 2em; }
   pointer-events: none;
   border-radius: 100%;
   border-color: yellow;
+  z-index: 999;
 }
 
 /*======================== TECHNICAL OVERWRITES================== */
